==> MLGMAG/EmbeddedPractice/Drivers/SSD1331/Src/ssd1331.c <==
#include "ssd1331.h"
#include <stdlib.h>

static void LCD_Command(uint8_t cmd) {
	HAL_GPIO_WritePin(SSD1331_CS_PORT, SSD1331_CS_PIN, GPIO_PIN_RESET);
	HAL_GPIO_WritePin(SSD1331_DC_PORT, SSD1331_DC_PIN, GPIO_PIN_RESET);
	HAL_SPI_Transmit(&SSD1331_SPI, &cmd, 1, 1000);
	HAL_GPIO_WritePin(SSD1331_CS_PORT, SSD1331_CS_PIN, GPIO_PIN_SET);
}

static void LCD_Data_8(uint8_t data) {
	HAL_GPIO_WritePin(SSD1331_CS_PORT, SSD1331_CS_PIN, GPIO_PIN_RESET);
	HAL_GPIO_WritePin(SSD1331_DC_PORT, SSD1331_DC_PIN, GPIO_PIN_SET);
	HAL_SPI_Transmit(&SSD1331_SPI, &data, 1, 1000);
	HAL_GPIO_WritePin(SSD1331_CS_PORT, SSD1331_CS_PIN, GPIO_PIN_SET);
}

static void LCD_Char(int16_t x, int16_t y, const SSD1331_GFXglyph *glyph,
		const SSD1331_GFXfont *font, uint8_t size, uint32_t color24) {
	uint8_t *bitmap = font->bitmap;
	uint16_t bo = glyph->bitmapOffset;
	uint8_t bits = 0, bit = 0;
	uint16_t set_pixels = 0;
	uint8_t cur_x, cur_y;

	for (cur_y = 0; cur_y < glyph->height; cur_y++) {
		for (cur_x = 0; cur_x < glyph->width; cur_x++) {
			if (bit == 0) {
				bits = (*(const unsigned char*) (&bitmap[bo++]));
				bit = 0x80;
			}
			if (bits & bit)
				set_pixels++;
			else if (set_pixels > 0) {
				SSD1331_Rect_Fill(
						x + (glyph->xOffset + cur_x - set_pixels) * size,
						y + (glyph->yOffset + cur_y) * size, size * set_pixels,
						size, color24);
				set_pixels = 0;
			}
			bit >>= 1;
		}
		if (set_pixels > 0) {
			SSD1331_Rect_Fill(x + (glyph->xOffset + cur_x - set_pixels) * size,
					y + (glyph->yOffset + cur_y) * size, size * set_pixels,
					size, color24);
			set_pixels = 0;
		}
	}
}

void SSD1331_IMG(const unsigned char *img, uint16_t x, uint16_t y,
		uint16_t width, uint16_t height) {
	uint16_t xx, yy;

	if ((x + width > SSD1331_WIDTH) | (y + height > SSD1331_HEIGHT)) {
		return;
	}

	for (yy = 0; yy < height; yy++) {
		//set column point
		LCD_Command(CMD_SET_COLUMN_ADDRESS);
		LCD_Command(x);
		LCD_Command(SSD1331_WIDTH - 1);
		//set row point
		LCD_Command(CMD_SET_ROW_ADDRESS);
		LCD_Command(y + yy);
		LCD_Command(SSD1331_HEIGHT - 1);
		HAL_GPIO_WritePin(SSD1331_DC_PORT, SSD1331_DC_PIN, GPIO_PIN_SET);
		HAL_GPIO_WritePin(SSD1331_CS_PORT, SSD1331_CS_PIN, GPIO_PIN_RESET);

		for (xx = 0; xx < width * 2; xx++) {
			LCD_Data_8(img[yy * width * 2 + xx]);
		}
	}
}

void SSD1331_Init(void) {
	LCD_Command(CMD_DISPLAY_OFF);          //Display Off
	LCD_Command(CMD_SET_CONTRAST_A);       //Set contrast for color A
	LCD_Command(0x91);                     //145 (0x91)
	LCD_Command(CMD_SET_CONTRAST_B);       //Set contrast for color B
	LCD_Command(0x50);                     //80 (0x50)
	LCD_Command(CMD_SET_CONTRAST_C);       //Set contrast for color C
	LCD_Command(0x7D);                     //125 (0x7D)
	LCD_Command(CMD_MASTER_CURRENT_CONTROL);            //master current control
	LCD_Command(0x06);                     //6
	LCD_Command(CMD_SET_PRECHARGE_SPEED_A); //Set Second Pre-change Speed For ColorA
	LCD_Command(0x64);                     //100
	LCD_Command(CMD_SET_PRECHARGE_SPEED_B); //Set Second Pre-change Speed For ColorB
	LCD_Command(0x78);                     //120
	LCD_Command(CMD_SET_PRECHARGE_SPEED_C); //Set Second Pre-change Speed For ColorC
	LCD_Command(0x64);                     //100
	LCD_Command(CMD_SET_REMAP);            //set remap & data format
	LCD_Command(0x72);                     //0x72
	LCD_Command(CMD_SET_DISPLAY_START_LINE);            //Set display Start Line
	LCD_Command(0x0);
	LCD_Command(CMD_SET_DISPLAY_OFFSET);   //Set display offset
	LCD_Command(0x0);
	LCD_Command(CMD_NORMAL_DISPLAY);       //Set display mode
	LCD_Command(CMD_SET_MULTIPLEX_RATIO);  //Set multiplex ratio
	LCD_Command(0x3F);
	LCD_Command(CMD_SET_MASTER_CONFIGURE); //Set master configuration
	LCD_Command(0x8E);
	LCD_Command(CMD_POWER_SAVE_MODE);      //Set Power Save Mode
	LCD_Command(0x00);                     //0x00
	LCD_Command(CMD_PHASE_PERIOD_ADJUSTMENT);  //phase 1 and 2 period adjustment
	LCD_Command(0x31);                     //0x31
	LCD_Command(CMD_DISPLAY_CLOCK_DIV); //display clock divider/oscillator frequency
	LCD_Command(0xF0);
	LCD_Command(CMD_SET_PRECHARGE_VOLTAGE);    //Set Pre-Change Level
	LCD_Command(0x3A);
	LCD_Command(CMD_SET_V_VOLTAGE);        //Set vcomH
	LCD_Command(0x3E);
	LCD_Command(CMD_DEACTIVE_SCROLLING);   //disable scrolling
	LCD_Command(CMD_NORMAL_BRIGHTNESS_DISPLAY_ON);   //set display on

	SSD1331_clearWindow(0, 0, SSD1331_WIDTH - 1, SSD1331_HEIGHT - 1);
	HAL_Delay(1);
}
